fix: prefers-dark mode font color

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
 @media (prefers-color-scheme: dark) {
     :root {
         --main-color:#202047;
-        --font-color:#F6F0F0;
+        --font-color:#83acdc;
     }
   }
   
